test/success/integration/_succ_expr_let_1.hs
x :: Int
x = let y :: Int; y = 3 in y
main = print "hello"
