test/fail/integration/_fail_grammar_let_block_func_2.hs
x :: Int
x = let y :: Int; y = 3 in jl
main = print "hello"